# Gummi

./: AUTHORS  MANIFEST.in  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  biblio.c  biblio.h  compile  config.h.in  configfile.c  configfile.h  configure  configure.ac  editor.c  editor.h  environment.c  environment.h  gettext.example  gui.c  gui.h  gummi.glade  gummi.h  importer.c  importer.h  iofunctions.c  iofunctions.h  main.c  motion.c  motion.h  preview.c  preview.h  setup.cfg  setup.py  template.c  template.h  updatecheck.c  updatecheck.h  utils.c  (+1 more)
cport/: AppConfig.cpp  AppConfig.h  ConfigFile.cpp  ConfigFile.h
data/: Makefile.am  Makefile.in  gummi-beta.desktop  gummi.glade  prefs.glade
data/snippets/: snippets.cfg
data/ui/: gummi.glade  prefs.glade  snippets.glade
dev/: chver.sh  control  fedora-build  latest  ubuntu-build  win32-build
gui/: gummi.glade
gummi/: Biblio.py  Core.py  Environment.py  Formatting.py  GummiGUI.py  IOFunctions.py  Importer.py  Motion.py  PdfPane.py  Preferences.py  PreviewPane.py  Template.py  TexPane.py  UpdateCheck.py  __init__.py  gummigui.py  motion.py  pdfpane.py  prefs.py  texpane.py  updatecheck.py
gummi-030/: Motion.py  PdfPane.py  Preferences.py  TexPane.py  UpdateCheck.py
gummi-030/docs/: CHANGES  LICENSE
gummi-030/gui/: gummi.xml  prefs.xml
gummi-030/misc/: gummi
gummi/docs/: CHANGES  INSTALL
gummi/gui/: gummi.glade  gummi.ui  gummi.xml  prefs.glade  prefs.ui  prefs.xml
gummi/misc/: gummi  gummi.desktop
notebook/: generator_discriminator_notebook.ipynb
po/: Makevars  POTFILES.in  ca_ES-335.po  ca_ES.po  da-355.po  da.po  de_DE.po  fr-333.po  fr.po  fr_incomplete.po  gr_EL-335.po  gr_EL.po  gummi.pot  it_IT-335.po  it_IT.po  nl_NL-381.po  nl_NL.po  pt_BR-335.po  pt_BR.po  ru-335.po  ru.po  template-335.po  template-381.pot  template.po  zh_TW-335.po  zh_TW-381.po  zh_TW.po
src/: Makefile  Makefile.am  Makefile.in  biblio.c  biblio.h  configfile.c  configfile.h  constants.h  editor.c  editor.h  environment.c  environment.h  external.c  external.h  gui.c  gui.h  gummi.cfg  importer.c  importer.h  iofunctions.c  iofunctions.h  latex.c  latex.h  main.c  motion.c  motion.h  porting.h  preview.c  preview.h  project.c  project.h  signals.c  signals.h  snippets.c  snippets.h  tabmanager.c  tabmanager.h  template.c  template.h  updatecheck.c  (+3 more)
src/compile/: latexmk.c  latexmk.h  rubber.c  rubber.h  texlive.c  texlive.h
src/gui/: gui-import.c  gui-import.h  gui-infoscreen.c  gui-infoscreen.h  gui-main.c  gui-main.h  gui-menu.c  gui-menu.h  gui-prefs.c  gui-prefs.h  gui-preview.c  gui-preview.h  gui-project.c  gui-project.h  gui-search.c  gui-search.h  gui-snippets.c  gui-snippets.h  gui-tabmanager.c  gui-tabmanager.h  gummi.glade
src/syncTeX/: synctex_parser.c  synctex_parser.h  synctex_parser_utils.c  synctex_parser_utils.h
(+3 files in other folders)
