bin_PROGRAMS = gummi
gummi_CFLAGS = -export-dynamic -Wall -O2 $(GUI_CFLAGS)
gummi_LDADD = $(GUI_LIBS)

gummi_SOURCES = biblio.c  biblio.h \
		configfile.c configfile.h \
		editor.c editor.h \
		environment.c environment.h \
		gui.c gui.h \
		importer.c importer.h \
		iofunctions.c iofunctions.h \
		main.c main.h \
		motion.c motion.h \
		preview.c preview.h \
		template.c template.h \
		updatecheck.c updatecheck.h \
		utils.c utils.h
